some more stuff

--- a/final_report.tex
+++ b/final_report.tex
@@ -98,6 +98,6 @@ breaklinks=true, }
 \nocite{example-journal,example-abstracts,example-conference2}
 
 \bibliographystyle{abbrv}
-\bibliography{sample}
+\bibliography{final_report}
 
 \end{document}
