Partially done report

--- a/final_report.bib
+++ b/final_report.bib
@@ -1,73 +1,289 @@
-%% This BibTeX bibliography file was created using BibDesk.
-%% http://bibdesk.sourceforge.net/
+@article{thomson2012byod,
+title={BYOD: enabling the chaos},
+author={Gordon Thomson},
+journal={Network Security},
+volume={2012},
+number={2},
+pages={5--8},
+year={2012},
+publisher={Elsevier}
+}
 
+@misc{goldberg2013byod,
+author = {Trevor Goldberg},
+title = {Securing Your Enterprise Data in a BYOD World},
+month = {April},
+year = {2013},
+url = {http://goo.gl/na8So}
+}
 
-%% Created for YYY at 2010-02-04 16:26:16 -0500 
+@misc{honig2013knox,
+author = {Zach Honig},
+title = {Samsung announces SAFE with Knox, details plans to secure the enterprise Galaxy (hands-on)},
+month = {February},
+year = {2013},
+url = {http://goo.gl/97DCc}
+}
 
+@misc{halliwell2013balance,
+author = {Donny Halliwell},
+title = {Better Balance Equals Better BYOD Living},
+month = {March},
+year = {2013},
+url = {http://goo.gl/OQpfO}
+}
 
-%% Saved with string encoding Unicode (UTF-8) 
+@misc{android2013sesnors,
+author = {Google},
+title = {Sensor Manager Class},
+month = {April},
+year = {2013},
+url = {http://goo.gl/1nMJ7}
+}
 
+@misc{guptill2013byod,
+author = {Bruce Guptill},
+title = {BYOD Managed ASAP},
+month = {April},
+year = {2013},
+url = {http://goo.gl/OoW99}
+}
 
+@misc{boxall2012battery,
+author = {Andy Boxall},
+title = {When will your phone battery last as long as your kindle?},
+month = {December},
+year = {2012},
+url = {http://goo.gl/T2T0R}
+}
 
-@conference{example-abstracts,
-	Author = {{Mather, B.D.}},
-	Booktitle = {{Ext. Abstracts CHI 2000}},
-	Date-Added = {2009-03-07 17:10:20 +0000},
-	Date-Modified = {2009-03-07 17:11:50 +0000},
-	Pages = {1--2},
-	Publisher = {ACM Press},
-	Title = {{Making up titles for conference papers}},
-	Year = {2000}}
+@misc{kaputska2013byod,
+author = {Paul Kapustka},
+title = {BYOD Needs Granular Controls},
+month = {April},
+year = {2013},
+url = {http://goo.gl/RNYDU}
+}
 
-@conference{example-conference2,
-	Author = {{Zellweger, P.T., Bouvin, N.O., Jeh{\o}j, H. and Mackinlay, J.D.}},
-	Booktitle = {Proc. Hypertext 2001},
-	Date-Added = {2009-03-07 17:08:24 +0000},
-	Date-Modified = {2009-03-07 17:12:39 +0000},
-	Pages = {9--18},
-	Publisher = {ACM Press},
-	Title = {{Fluid Annotations in an Open World}},
-	Year = {2001}}
+@misc{harris2013byod,
+author = {Derrick Harris},
+title = {Ionic Security raises \$9.4M to make BYOD safe},
+month = {April},
+year = {2013},
+url = {http://goo.gl/j835y}
+}
 
-@conference{example-conference,
-	Author = {{Klemmer, R.S., Thomsen, M., Phelps-Goodman, E., Lee, R. and Landay, J.E.}},
-	Booktitle = {Proc. CHI 2002},
-	Date-Added = {2009-03-07 17:02:00 +0000},
-	Date-Modified = {2010-02-04 16:24:18 -0500},
-	Pages = {{1--8}},
-	Publisher = {ACM Press},
-	Title = {{Where do web site come from? Capturing and interacting with design history}},
-	Year = {2002}}
+@misc{gross2013indoorloc,
+author = {Doug Gross},
+title = {The growing push to track your location indoors},
+month = {March},
+year = {2013},
+url = {http://goo.gl/Bfmzv}
+}
 
-@article{example-journal,
-	Author = {{Anderson, R. E.}},
-	Date-Added = {2009-03-07 16:57:41 +0000},
-	Date-Modified = {2009-03-07 17:10:51 +0000},
-	Journal = {Social Science Computing Review},
-	Number = {2},
-	Pages = {453--469},
-	Title = {Social impacts of computing: COdes of professional ethics},
-	Volume = {10},
-	Year = {1992}}
+@misc{gross2013gpsfingerprint,
+author = {Doug Gross},
+title = {How your movements create a GPS 'fingerprint'},
+month = {April},
+year = {2013},
+url = {http://goo.gl/eor69}
+}
 
-@book{schwartz95,
-	Address = {Bloomington, IN, USA},
-	Author = {{Schwartz, M.}},
-	Date-Added = {2009-03-07 16:20:46 +0000},
-	Date-Modified = {2009-03-07 17:10:51 +0000},
-	Publisher = {Indiana University Press},
-	Title = {Guidelines for Bias-Free Writing},
-	Year = {1995}}
+@article{blumberg2009locational,
+title={On locational privacy, and how to avoid losing it forever},
+author={Andrew J. Blumberg and Peter Eckersley},
+journal={Electronic Frontier Foundation},
+year={2009}
+}
 
-@misc{acrobat,
-	Date-Added = {2009-03-07 16:11:01 +0000},
-	Date-Modified = {2009-03-07 17:10:51 +0000},
-	Note = {\small{\url{http://get.adobe.com/reader/}}},
-	Title = {{Adobe Acrobat Reader}},
-	Url = {http://get.adobe.com/reader/},
-	Bdsk-Url-1 = {http://get.adobe.com/reader/}}
+@inproceedings{pathak2011finegrainedenergy,
+author = {Abhinav Pathak and Y. Charlie Hu and  Ming Zhang and Ming Paramvir Bahl and Yi-Min Wang},
+title = {Fine-grained power modeling for smartphones using system call tracing},
+booktitle = {Proceedings of the sixth conference on Computer systems},
+series = {EuroSys '11},
+year = {2011},
+isbn = {978-1-4503-0634-8},
+location = {Salzburg, Austria},
+pages = {153--168},
+numpages = {16},
+url = {http://doi.acm.org/10.1145/1966445.1966460},
+doi = {10.1145/1966445.1966460},
+acmid = {1966460},
+publisher = {ACM},
+address = {New York, NY, USA},
+keywords = {energy, mobile, smartphone},
+}
 
-@misc{acm_categories,
-	Date-Modified = {2009-03-07 17:10:51 +0000},
-	Note = {\small{\url{http://www.acm.org/class/how_to_use.html}}},
-	Title = {{How to Classify Works Using ACM's Computing Classification System}}}
+@MASTERSTHESIS{ghosh2012ms,
+author = {Dibyajyoti Ghosh},
+title = {Context based privacy and security in smartphones},
+school = {University of Maryland, Baltimore County},
+year = {2012}
+}
+
+@MASTERSTHESIS{sane2012ms,
+author = {Amey Sane},
+title = {Predicting the Activities of mobile phone users with Hidden Markov models.},
+school = {University of Maryland, Baltimore County},
+year = {2012}
+}
+
+@INPROCEEDINGS{ghosh2012privacy, 
+author = {Dibyajyoti Ghosh and Anupam Joshi and Tim Finin and Pramod Jagtap}, 
+booktitle={Security and Privacy Workshops (SPW), 2012 IEEE Symposium on},
+title={Privacy Control in Smart Phones Using Semantically Rich Reasoning and Context Modeling}, 
+year={2012}, 
+pages={82-85}, 
+keywords={data privacy;inference mechanisms;mobile computing;operating systems (computers);security of data;semantic Web;smart phones;Android;application roles;collaborative localization;context modeling;context tracking;context-dependent information sharing policies;contextual privacy preservation;embedded sensor data access;embedded sensor data sharing;mobile OS frameworks;mobile devices;model device location;privacy control;rich reasoning;security concerns;semantic Web driven technologies;semantic reasoning;smart phones;user context information;Cognition;Context;Mobile communication;Privacy;Security;Semantic Web;Smart phones;Jena;android;context awareness;mobile;semantic web}, 
+doi={10.1109/SPW.2012.27}
+}
+
+@article{horrocks2004swrl,
+title={SWRL: A semantic web rule language combining OWL and RuleML},
+author={Ian Horrocks and Peter F. Patel-Schneider and Harold Boley and
+Said Tabet and Benjamin Grosof and Mike Dean and others},
+journal={W3C Member submission},
+volume={21},
+pages={79},
+year={2004}
+}
+
+@inproceedings{liu2012gps,
+author = {Jie Liu and Bodhi Priyantha and Ted Hart and Heitor S. Ramos
+and Antonio A. F. Loureiro and Qiang Wang},
+title = {Energy efficient GPS sensing with cloud offloading},
+booktitle = {Proceedings of the 10th ACM Conference on Embedded Network Sensor Systems},
+series = {SenSys '12},
+year = {2012},
+isbn = {978-1-4503-1169-4},
+location = {Toronto, Ontario, Canada},
+pages = {85--98},
+numpages = {14},
+url = {http://doi.acm.org/10.1145/2426656.2426666},
+doi = {10.1145/2426656.2426666},
+acmid = {2426666},
+publisher = {ACM},
+address = {New York, NY, USA},
+keywords = {assisted GPS, cloud-offloading, coarse-time navigation, location},
+}
+@inproceedings{zavala2011mobile,
+title={Mobile, Collaborative, Context-Aware Systems},
+author={Laura Zavala and Radhika Dharurkar and Pramod Jagtap and Tim Finin and Anupam Joshi},
+booktitle={Proc. AAAI Workshop on Activity Context Representation: Techniques and Languages, AAAI. AAAI Press},
+year={2011}
+}
+@incollection{conti2011crepe,
+year={2011},
+isbn={978-3-642-18177-1},
+booktitle={Information Security},
+volume={6531},
+series={Lecture Notes in Computer Science},
+editor={Burmester, Mike and Tsudik, Gene and Magliveras, Spyros and Ilic, Ivana},
+doi={10.1007/978-3-642-18178-8_29},
+title={CRePE: Context-Related Policy Enforcement for Android},
+url={http://dx.doi.org/10.1007/978-3-642-18178-8_29},
+publisher={Springer Berlin Heidelberg},
+keywords={Android Security; Context Policy; Policy Enforcement},
+author={Mauro Conti and Vu Thien Nga Nguyen and Bruno Crispo},
+pages={331-345}
+}
+@inproceedings{sadeh2003mycampus,
+author = {Norman M. Sadeh and Ting-Chak Chan and Linh Van and Oh Byung Kwon and Kazuaki Takizawa},
+title = {A semantic web environment for context-aware m-commerce},
+booktitle = {Proceedings of the 4th ACM conference on Electronic commerce},
+series = {EC '03},
+year = {2003},
+isbn = {1-58113-679-X},
+location = {San Diego, CA, USA},
+pages = {268--269},
+numpages = {2},
+url = {http://doi.acm.org/10.1145/779928.779992},
+oi = {10.1145/779928.779992},
+acmid = {779992},
+publisher = {ACM},
+address = {New York, NY, USA},
+keywords = {mobile internet services, semantic web services},
+}
+@INPROCEEDINGS{palani2012infoflow, 
+author={P. Kodeswaran and V. Nandakumar and S. Kapoor and P. Kamaraju and A. Joshi and S. Mukherjea}, 
+booktitle={Mobile Data Management (MDM), 2012 IEEE 13th International Conference on},
+title={Securing Enterprise Data on Smartphones Using Run Time Information Flow Control}, 
+year={2012}, 
+pages={300-305}, 
+keywords={business data processing;data privacy;invasive software;operating systems (computers);smart phones;Android;enterprise data security;enterprise grade security;information flow policy;inter-process communication;malware;performance evaluation;permission usage;personal application;personal apps;privacy protection;public market place;run time enforcement;run time information flow control;run time monitoring;smartphone;Context;Electronic mail;Monitoring;Receivers;Security;Servers;Smart phones;policy;privacy;security;smart phones}, 
+doi={10.1109/MDM.2012.50}
+}
+@inproceedings{das2012energy,
+title={Energy efficient semantic context model for managing privacy on smartphones},
+author={Prajit Kumar Das and Dibyajyoti Ghosh and Anupam Joshi and Tim Finin},
+booktitle={14th International Workshop on Mobile Computing Systems and Applications},
+year={2012},
+organization={ACM}
+}
+@inproceedings{enck2010taintdroid,
+title={TaintDroid: an information-flow tracking system for realtime privacy monitoring on smartphones},
+author={William Enck and Peter Gilbert and Byung-Gon Chun and Landon
+P. and Cox and Jaeyeon Jung and Patrick McDaniel and Anmol N. Sheth},
+booktitle={Proceedings of the 9th USENIX conference on Operating systems design and implementation},
+pages={1--6},
+year={2010}
+}
+@inproceedings{nath2012ace,
+author = {Suman Nath},
+title = {ACE: exploiting correlation for energy-efficient and continuous context sensing},
+booktitle = {Proceedings of the 10th international conference on Mobile systems, applications, and services},
+series = {MobiSys '12},
+year = {2012},
+isbn = {978-1-4503-1301-8},
+location = {Low Wood Bay, Lake District, UK},
+pages = {29--42},
+numpages = {14},
+url = {http://doi.acm.org/10.1145/2307636.2307640},
+doi = {10.1145/2307636.2307640},
+acmid = {2307640},
+publisher = {ACM},
+address = {New York, NY, USA},
+keywords = {continuous context-aware applications, rule-based optimization, sensor-rich mobile environment},
+}
+@inproceedings{wang2009userstaterecog,
+author = {Yi Wang and Jialiu Lin and Murali Annavaram and Quinn
+A. Jacobson and Jason Hong and Bhaskar Krishnamachari and Norman Sadeh},
+title = {A framework of energy efficient mobile sensing for automatic user state recognition},
+booktitle = {Proceedings of the 7th international conference on Mobile systems, applications, and services},
+series = {MobiSys '09},
+year = {2009},
+isbn = {978-1-60558-566-6},
+location = {Krak\&\#243;w, Poland},
+ages = {179--192},
+numpages = {14},
+url = {http://doi.acm.org/10.1145/1555816.1555835},
+doi = {10.1145/1555816.1555835},
+acmid = {1555835},
+publisher = {ACM},
+address = {New York, NY, USA},
+keywords = {eemss, energy efficiency, human state recognition, mobile sensing},
+}
+@inproceedings{kennedy2011jigsaw,
+title={Jigsaw: Efficient optimization over uncertain enterprise data},
+author={Oliver Kennedy and Suman Nath},
+booktitle={ACM SIGMOD},
+year={2011}
+}
+@inproceedings{ra2012medusa,
+author = {Moo-Ryong Ra and Bin Liu and Tom F. La Porta and Ramesh Govindan},
+title = {Medusa: a programming framework for crowd-sensing applications},
+booktitle = {Proceedings of the 10th international conference on Mobile systems, applications, and services},
+series = {MobiSys '12},
+year = {2012},
+isbn = {978-1-4503-1301-8},
+location = {Low Wood Bay, Lake District, UK},
+pages = {337--350},
+numpages = {14},
+url = {http://doi.acm.org/10.1145/2307636.2307668},
+doi = {10.1145/2307636.2307668},
+acmid = {2307668},
+publisher = {ACM},
+address = {New York, NY, USA},
+keywords = {crowd-sensing, macroprogramming, programming framework, smartphone, worker mediation},
+}
+
